RESOLVED FIXED74119
HiDPI: Switching a video element to full screen in HiDPI mode doesn't fit the screen correctly
https://bugs.webkit.org/show_bug.cgi?id=74119
Summary HiDPI: Switching a video element to full screen in HiDPI mode doesn't fit the...
Jer Noble
Reported 2011-12-08 12:22:44 PST
HiDPI: Switching a video element to full screen in HiDPI mode doesn't fit the screen correctly
Attachments
Patch (1.95 KB, patch)
2011-12-08 12:29 PST, Jer Noble
darin: review+
Jer Noble
Comment 1 2011-12-08 12:25:23 PST
Jer Noble
Comment 2 2011-12-08 12:29:02 PST
Jer Noble
Comment 3 2011-12-08 13:23:26 PST
Note You need to log in before you can comment on or make changes to this bug.