HiDPI: Switching a video element to full screen in HiDPI mode doesn't fit the screen correctly https://bugs.webkit.org/show_bug.cgi?id=74119 rdar://problem/10356869

Reviewed by Darin Adler.

Use the Lion-only -[NSWindow convertRectToScreen:] function to convert between window
coordinates and screen coordinates.

* UIProcess/mac/WKFullScreenWindowController.mm:
(-[WKFullScreenWindowController enterFullScreen:]):

Canonical link: https://commits.webkit.org/90785@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102377 268f45cc-cd09-0410-ab3c-d52691b4dbfc